# Nuked-SC55-CLAP

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-macos.sh  meson.build  vcpkg.json
.github/workflows/: build-windows-linux.yml  build.yml
src/: nuked_sc55.cpp  nuked_sc55.h  nuked_sc55_win32.manifest  plugin.cpp
src/nuked-sc55/backend/: audio.h  cast.h  emu.cpp  emu.h  lcd.cpp  lcd.h  lcd_back.h  math_util.h  mcu.cpp  mcu.h  mcu_interrupt.cpp  mcu_interrupt.h  mcu_opcodes.cpp  mcu_opcodes.h  mcu_timer.cpp  mcu_timer.h  path_util.cpp  pcm.cpp  pcm.h  ringbuffer.h  rom.cpp  rom.h  rom_io.cpp  rom_io.h  submcu.cpp  submcu.h
src/nuked-sc55/backend/sha/: sha-private.h  sha.h  sha224-256.c
src/nuked-sc55/common/: rom_loader.cpp  rom_loader.h
